Enable Redis caching and configure cache TTL for specific entities